mise a jour du readme pour qu'ils sois plus lisible

--- a/fichier.html
+++ b/fichier.html
@@ -25,7 +25,8 @@
       dossier
     </h6>
     <u>j'ai crée le répertoire (repo) sur github pour y mettre mon site</u>
-    <br /><b>jai fais : git init pour initialiser le dépôt</b> <br />
+    <br />
+    <b>jai fais : git init pour initialiser le dépôt</b> <br />
     <i>j'ai fais : git add . pour y mettre mes 2 fichiers</i>
     <br />
     <p>j'ai fais git commit -m avec mon commentaire</p>
