création de la page css avec le body vert et des paragraphe transformer

--- a/fichier.html
+++ b/fichier.html
@@ -6,7 +6,7 @@
     <title>ligne de commande</title>
   </head>
   <body>
-    <p>jai fais : cd documents pour me rendre au bonne endroit</p>
+    jai fais : cd documents pour me rendre au bonne endroit
     <h1>
       j'ai fais : ls pour voir que jetais bien au bonne endroit et voir les
       dossiers que j'aivais deja
@@ -29,9 +29,9 @@
     <b>jai fais : git init pour initialiser le dépôt</b> <br />
     <i>j'ai fais : git add . pour y mettre mes 2 fichiers</i>
     <br />
-    <p>j'ai fais git commit -m avec mon commentaire</p>
+    <p class="souligner">j'ai fais git commit -m avec mon commentaire</p>
     <h2>j'ai insérer le lien de la page web dans le terminals</h2>
-    <h3>j'ai fais le push</h3>
-    <h4>fin</h4>
+    <span>j'ai fais le push</span>
+    <p class="encadrer">fin</p>
   </body>
 </html>
