--- a/fichier.html
+++ b/fichier.html
@@ -20,6 +20,7 @@
     <h5>
       j'ai fais : echo bonjour > fichier.html pour créer mon fichier sur html
     </h5>
+    <img src="./aquali corps piroli tete.png" alt="">
     <h6>
       j'ai fais : ls pour voir si mon fichier avais bien été crée dans mon
       dossier
