page inde terminer

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <p class="souligner">j'ai fais git commit -m avec mon commentaire</p>
     <h2>j'ai insérer le lien de la page web dans le terminals</h2>
     <span>j'ai fais le push</span>
-    <p class="encadrer">fin</p>
+    <p class="encadrer">fin.</p>
   </body>
 </html>
